--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  /* Cámara detrás */
+  /* Cámara detrás (el <video> del stream) */
+  video{background:#000}
   video[playsinline]{
     position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
-    object-fit:cover!important;z-index:0!important;background:#000!important
+    object-fit:cover!important;z-index:0!important
   }
   /* WebGL delante (interactivo) */
   a-scene{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:auto!important}
@@ -20,8 +21,9 @@
   /* UI */
   .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9}
   .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
+  .btn[disabled]{opacity:.5}
   .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
-       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.2;transition:opacity .35s}
+       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.25;transition:opacity .35s;max-width:44ch}
   .dbg:hover{opacity:1}
   .cal{position:fixed;left:8px;bottom:8px;display:flex;gap:6px;flex-wrap:wrap;z-index:9}
   .chip{background:#0f1522;border:1px solid #2a3a58;color:#eaf2ff;border-radius:10px;padding:6px 8px}
@@ -52,8 +54,8 @@
   style="width:100vw;height:100vh">
 
   <a-assets timeout="60000" id="assets">
-    <!-- Le ponemos src vacío y lo setea JS (reduce warnings) -->
-    <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous" src=""></video>
+    <!-- Tu vídeo de contenido. El src lo asigna el JS desde el cfg -->
+    <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"></video>
   </a-assets>
 
   <!-- Cursor para click/tap en 3D -->
@@ -68,9 +70,11 @@
 (async function(){
   const qs  = new URLSearchParams(location.search);
   const dbg = document.getElementById('dbg');
+  const btnStart = document.getElementById('btnStart');
+  const btnAudio = document.getElementById('btnAudio');
   const say = m => { dbg.textContent = m + ' · ' + new Date().toLocaleTimeString(); console.log('[AR]',m); };
 
-  /* ===== DEFAULTS (se pisan por cfg) ===== */
+  /* ===== DEFAULTS ===== */
   const DEFAULTS = {
     target: 'https://res.cloudinary.com/dtge9nklw/raw/upload/v1759401459/targets_12_j14r8e.mind',
     video:  'https://res.cloudinary.com/dtge9nklw/video/upload/f_mp4,vc_h264,ac_aac,br_1200k,vs_30,w_1280/v1759311664/0_Couple_Beach_3840x2160_fgnn6o.mp4',
@@ -85,11 +89,11 @@
     slotBar:   {x:300, y:2640, w:2060, h:26},
     slotPlay:  {x:1050, y:2920, w:380,  h:380},
     cal:{dx:-30, dy:432, scale:1.185, rot:-0.2},
-    autoplayOnFound:true,   /* 👈 AHORA significa: sonar al detectar, NO al abrir cámara */
+    autoplayOnFound:true,   // 🔊 Reproduce SOLO cuando se detecta el target
     parallax:false, showCal:false
   };
 
-  /* ===== Carga cfg opcional (?cfg=URL) ===== */
+  /* ===== Cargar cfg (?cfg=URL) o defaults ===== */
   async function loadCfg(){
     let cfg = {...DEFAULTS};
     const cfgUrl = qs.get('cfg');
@@ -106,23 +110,24 @@
   const CFG = await loadCfg();
 
   /* ===== A-Frame / MindAR ===== */
-  const scene=document.getElementById('scene');
+  const scene  = document.getElementById('scene');
+  const anchor = document.getElementById('anchor');
   scene.setAttribute('mindar-image', `imageTargetSrc:${CFG.target}; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;`);
 
+  // Diagnóstico MindAR
   scene.addEventListener('arReady', ()=>say('Cámara OK (MindAR listo)'));
   scene.addEventListener('arError', ()=>say('❗ Error de cámara/permisos MindAR'));
 
-  // Cámara stream cover
+  // Asegurar el <video> de cámara en cover (sólo si es stream)
   new MutationObserver(()=>{ document.querySelectorAll('video').forEach(v=>{
     if(v.srcObject instanceof MediaStream){
-      Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
+      Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0'});
     }
   });}).observe(document.documentElement,{subtree:true,childList:true});
 
+  /* ===== Construcción del contenido (vídeo + overlay) ===== */
   const PW=CFG.pw||2481, PH=CFG.ph||3508, H=PH/PW;
   const px2=(x,y,w,h)=>({wn:w/PW, hn:h/PW, cx:-0.5+(x+w/2)/PW, cy:H/2-(y+h/2)/PW});
-
-  const anchor=document.getElementById('anchor');
   const root=document.createElement('a-entity'); anchor.appendChild(root);
   root.setAttribute('animation__pop','property:scale; from:0.96 0.96 1; to:1 1 1; dur:360; easing:easeOutQuad; startEvents:pop');
 
@@ -131,12 +136,12 @@
     root.setAttribute('position', `${(cal.dx||0)/PW} ${-(cal.dy||0)/PW} 0`);
     root.setAttribute('scale', `${cal.scale||1} ${cal.scale||1} 1`);
     root.setAttribute('rotation', `0 0 ${cal.rot||0}`);
-    document.getElementById('readout').textContent =
-      `dx:${Math.round(cal.dx||0)} dy:${Math.round(cal.dy||0)} scale:${(cal.scale||1).toFixed(3)} rot:${(cal.rot||0)}`;
+    const ro = document.getElementById('readout');
+    if(ro) ro.textContent = `dx:${Math.round(cal.dx||0)} dy:${Math.round(cal.dy||0)} scale:${(cal.scale||1).toFixed(3)} rot:${(cal.rot||0)}`;
   }
   applyCal();
 
-  // Vignette
+  // Vignette sutil
   const vignette=document.createElement('a-plane');
   vignette.setAttribute('width', 1.14);
   vignette.setAttribute('height', H*1.14);
@@ -144,9 +149,9 @@
   vignette.setAttribute('material','shader:flat; color:#000; opacity:.20; transparent:true; side:double; depthTest:false');
   root.appendChild(vignette);
 
-  /* ===== VÍDEO ===== */
-  const v1=document.getElementById('v1');
-  v1.setAttribute('src', CFG.video || '');
+  // Vídeo
+  const v1 = document.getElementById('v1');
+  v1.src = CFG.video || '';
   const vslot = CFG.slotVid;
   const u = px2(vslot.x,vslot.y,vslot.w,vslot.h);
   const vPlane=document.createElement('a-plane');
@@ -166,7 +171,7 @@
   vPlane.addEventListener('materialtextureloaded', setCover);
   v1.addEventListener('loadedmetadata', ()=>{ v1.play().catch(()=>{}); setCover(); }, {once:true});
 
-  /* ===== CANVAS OVERLAY (títulos + barra/wave) ===== */
+  // Canvas overlay (títulos + barra/wave)
   const Cw = 2048, Ch = Math.round(Cw*H);
   const canvas = document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
   const ctx = canvas.getContext('2d');
@@ -196,12 +201,8 @@
   const titlePx = fitFontFor(CFG.title||'',  titleSlot.w*Cw/PW,   titleSlot.h*Ch/PH, 800);
   const artistPx= fitFontFor(CFG.artist||'', artistSlot.w*Cw/PW, artistSlot.h*Ch/PH, 600);
 
-  /* ===== AUDIO (solo al detectar) ===== */
-  const btnStart = document.getElementById('btnStart');
-  const btnAudio = document.getElementById('btnAudio');
-
-  let audio=null, acx=null, analyser=null, lastBeat=0;
-
+  // Audio (se reproduce SOLO al detectar)
+  let audio=null, acx=null, analyser=null;
   function setupAudio(){
     if(audio) return;
     audio = new Audio(CFG.audio||''); audio.crossOrigin='anonymous'; audio.preload='auto';
@@ -213,21 +214,7 @@
     }catch(e){}
   }
 
-  // NO reproducimos aquí: solo desbloqueamos AudioContext con el gesto
-  const startAR = async () => {
-    try{
-      const sys=scene.systems['mindar-image-system']; const comp=scene.components['mindar-image'];
-      if(sys && sys.start) await sys.start(); else if(comp && comp.start) await comp.start();
-      btnStart.disabled=true; btnStart.textContent='Cámara lista';
-      // Preparamos audio y desbloqueamos el contexto, PERO SIN reproducir
-      setupAudio();
-      try{ acx && acx.state==='suspended' && await acx.resume(); }catch{}
-      say('Cámara iniciada');
-    }catch{ say('No se pudo iniciar cámara'); }
-  };
-  btnStart.onclick = startAR;
-
-  /* ===== Dibujo textos + barra + waveform ===== */
+  // Dibujo overlay (título/artista/barra/wave)
   const waveTopHeight = Math.round(34*Cw/2048), waveGap = Math.round(22*Cw/2048);
   function mmss(t){ if(!isFinite(t)||t<0) t=0; const m=Math.floor(t/60), s=Math.floor(t%60); return `${m}:${s.toString().padStart(2,'0')}`; }
 
@@ -323,8 +310,99 @@
     })();
   }
 
-  /* ===== Estados / UI ===== */
-  // Calibración con ?cal=1
+  /* ====== ARRANQUE ROBUSTO ====== */
+  let startTimeoutId = null;
+
+  async function probeCamera(){
+    // Pre-chequeo para obtener el prompt de permisos y ver errores claros
+    if(!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia){
+      throw new Error('getUserMedia no disponible (abre en Safari/Chrome fuera de apps embebidas y con HTTPS).');
+    }
+    const cons = {video:{facingMode:{ideal:'environment'}}, audio:false};
+    const stream = await navigator.mediaDevices.getUserMedia(cons);
+    // cerramos inmediatamente (MindAR abrirá su propio stream)
+    stream.getTracks().forEach(t=>t.stop());
+  }
+
+  async function startMindAR(){
+    return new Promise(async (resolve, reject)=>{
+      try{
+        const sys = scene.systems['mindar-image-system'];
+        const comp= scene.components['mindar-image'];
+        const doStart = async()=>{ if(sys && sys.start) await sys.start(); else if(comp && comp.start) await comp.start(); resolve(); };
+        if(scene.hasLoaded) doStart();
+        else scene.addEventListener('loaded', doStart, {once:true});
+      }catch(e){ reject(e); }
+    });
+  }
+
+  async function fullStart(){
+    try{
+      btnStart.disabled = true; btnStart.textContent='Abriendo cámara…';
+      say('Pidiendo permisos de cámara…');
+      await probeCamera();
+      say('Permisos OK. Iniciando MindAR…');
+      await startMindAR();
+      say('Cámara iniciada. Apunta al póster.');
+      btnStart.textContent='Cámara lista';
+      // watchdog: si en 6s no llega arReady, permite reintentar
+      clearTimeout(startTimeoutId);
+      startTimeoutId = setTimeout(()=>{
+        if(dbg.textContent.includes('Cámara iniciada')){
+          btnStart.disabled=false;
+          btnStart.textContent='Reintentar';
+          say('No llegó arReady: pulsa “Reintentar” o abre en navegador nativo (no embebido).');
+        }
+      }, 6000);
+    }catch(err){
+      console.warn(err);
+      btnStart.disabled=false; btnStart.textContent='Reintentar';
+      say('❗ No se pudo abrir cámara: '+(err && err.message ? err.message : err));
+    }
+  }
+
+  btnStart.onclick = fullStart;
+
+  // iOS / primer tap de cortesía
+  window.addEventListener('pointerup', ()=>btnStart.click(), {once:true, passive:true});
+
+  /* ====== TARGET events: aquí controlamos el audio ====== */
+  anchor.addEventListener('targetFound', async ()=>{
+    root.emit('pop',null,false);
+    document.getElementById('btnAudio').disabled=false;
+    v1.play().catch(()=>{});
+    if(CFG.autoplayOnFound){
+      setupAudio();
+      try{
+        if(acx && acx.state==='suspended') await acx.resume();
+        await audio.play();
+        btnAudio.textContent='⏸ Audio';
+      }catch(e){ btnAudio.textContent='▶️ Audio'; }
+    }
+    say('Target FOUND');
+  });
+
+  anchor.addEventListener('targetLost', ()=>{
+    v1.pause();
+    if(audio){ audio.pause(); btnAudio.textContent='▶️ Audio'; }
+    document.getElementById('btnAudio').disabled=true;
+    say('Target LOST…');
+  });
+
+  // Botón ⏯ (solo si hay target)
+  btnAudio.onclick = async ()=>{
+    if(!audio) setupAudio();
+    try{
+      if(audio.paused){
+        if(acx && acx.state==='suspended') await acx.resume();
+        await audio.play(); btnAudio.textContent='⏸ Audio';
+      }else{
+        audio.pause(); btnAudio.textContent='▶️ Audio';
+      }
+    }catch(e){}
+  };
+
+  /* ====== Calibración (?cal=1) ====== */
   document.getElementById('cal').style.display = (qs.get('cal')==='1' ? 'block' : 'none');
   document.querySelectorAll('#cal [data-a]').forEach(b=>{
     b.onclick=()=>{
@@ -346,38 +424,6 @@
     try{ await navigator.clipboard.writeText(url.toString()); alert('URL copiada'); }catch{ prompt('Copia la URL', url.toString()); }
   };
 
-  // 🔊 Solo permite controlar audio cuando HAY target
-  btnAudio.disabled = true;
-
-  anchor.addEventListener('targetFound', async ()=>{
-    root.emit('pop',null,false);
-    v1.play().catch(()=>{});
-    btnAudio.disabled=false;
-
-    // Si está configurado, reproducimos al detectar (y ya hubo gesto al abrir cámara)
-    if(CFG.autoplayOnFound){
-      setupAudio();
-      try{
-        if(acx && acx.state==='suspended') await acx.resume();
-        await audio.play();
-        btnAudio.textContent='⏸ Audio';
-      }catch(e){
-        // Si el navegador bloquea, el botón queda habilitado para pulsarlo
-        btnAudio.textContent='▶️ Audio';
-      }
-    }
-    say('Target FOUND');
-  });
-
-  anchor.addEventListener('targetLost', ()=>{
-    v1.pause();
-    if(audio){ audio.pause(); btnAudio.textContent='▶️ Audio'; }
-    btnAudio.disabled=true; // deshabilita control sin target
-    say('Target LOST…');
-  });
-
-  // iOS: primer tap → iniciar cámara (desbloquea AudioContext pero no suena nada)
-  window.addEventListener('pointerup', ()=>btnStart.click(), {once:true,passive:true});
 })();
 </script>
 </body>
